force-app/main/default/objects/Invoice__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount after taxes</description>
    <inlineHelpText>Amount after taxes</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>