force-app/main/default/objects/Invoice__c/fields/AmountBeforeTax__c.field-meta.xml
<CustomField>
    <fullName>AmountBeforeTax__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount Before Tax</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>