force-app/main/default/objects/Invoice__c/fields/ChargeMap__c.field-meta.xml
<CustomField>
    <fullName>ChargeMap__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge Map</label>
    <referenceTo>ChargeMap__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>