force-app/main/default/objects/Invoice__c/fields/ChargeMapItem__c.field-meta.xml
<CustomField>
    <fullName>ChargeMapItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge Map Item</label>
    <referenceTo>ChargeMapItem__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>