force-app/main/default/objects/Invoice__c/fields/InvoiceDetails__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDetails__c</fullName>
    <label>Invoice details</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>