force-app/main/default/objects/Invoice__c/fields/NetsuiteId__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Netsuite Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>