force-app/main/default/objects/Invoice__c/fields/Number_Of_Invoice_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Invoice_Items__c</fullName>
    <label>Number Of Invoice Items</label>
    <summaryForeignKey>InvoiceLineItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>