force-app/main/default/objects/Invoice__c/fields/OldOffre__c.field-meta.xml
<CustomField>
    <fullName>OldOffre__c</fullName>
    <label>OldOffre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GC</fullName>
            </value>
            <value>
                <fullName>Pack ETT</fullName>
            </value>
            <value>
                <fullName>Pack Evolution</fullName>
            </value>
            <value>
                <fullName>Pixid Direct</fullName>
            </value>
            <value>
                <fullName>PSI</fullName>
            </value>
            <value>
                <fullName>PPE</fullName>
            </value>
            <value>
                <fullName>Portail Salarié et Sourcing</fullName>
            </value>
            <value>
                <fullName>PPE PACK WEB</fullName>
            </value>
            <value>
                <fullName>Pack</fullName>
            </value>
            <value>
                <fullName>GC apporté</fullName>
            </value>
            <value>
                <fullName>Pack apporté</fullName>
            </value>
            <value>
                <fullName>Carerix</fullName>
            </value>
            <value>
                <fullName>GC ETT</fullName>
            </value>
            <value>
                <fullName>App mobile</fullName>
            </value>
            <value>
                <fullName>PPE GC</fullName>
            </value>
            <value>
                <fullName>Pack First</fullName>
            </value>
            <value>
                <fullName>myPixid</fullName>
            </value>
            <value>
                <fullName>Pack EU</fullName>
            </value>
            <value>
                <fullName>CDD</fullName>
            </value>
            <value>
                <fullName>Bestt</fullName>
            </value>
            <value>
                <fullName>Portail clients</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>