force-app/main/default/objects/Invoice__c/fields/OldOpportunityName__c.field-meta.xml
<CustomField>
    <fullName>OldOpportunityName__c</fullName>
    <label>Old Opportunity Name</label>
    <type>TextArea</type>
</CustomField>