force-app/main/default/objects/Invoice__c/fields/OriginalInvoice__c.field-meta.xml
<CustomField>
    <fullName>OriginalInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>OriginalInvoice</relationshipName>
    <type>Lookup</type>
</CustomField>