force-app/main/default/objects/Invoice__c/listViews/All_Migrated_invoices.listView-meta.xml
<ListView>
    <fullName>All_Migrated_invoices</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Amount__c</columns>
    <columns>AmountBeforeTax__c</columns>
    <columns>PaymentDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Migrated invoices</label>
</ListView>